feat: create dbtask with sql lite

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="label_description">Descrição</string>
     <string name="label_create_task">Criar Tarefa</string>
     <string name="label_cancel">Cancelar</string>
+    <string name="label_edit">Editar</string>
+    <string name="label_delete">Deletar</string>
 </resources>
